Fixed Header Overflow Scrolling

--- a/styles/newUI/home.module.css
+++ b/styles/newUI/home.module.css
@@ -13,6 +13,7 @@
 
 
 .header {
+    overflow: hidden;
     padding: 4vmin;
     display: flex;
     gap: 1vmin;
